src/index.module.scss
/* ... */
.content-signin-wrapper, .content-wrapper {
  max-width: 988px;
  -webkit-margin-bottom-collapse: separate;
  max-height: 100%;
}

#wallet-div {
  @media (max-width: calc(1200px)) {
    .content-wrapper {
      padding-left: 6rem;
    }

    .backup-alert {
      padding-left: 5rem;
    }

    .token-import-banner {
      padding-left: 5rem;
    }
  }
}

.content-wrapper {
  margin: 64px auto;
  max-width: 988px;
  padding: 2rem 1rem;
}

.content-signin-wrapper {
  margin: 5rem auto;
}

.d-flex-1 {
  flex-grow: 1;
}

.d-flex-2 {
  flex-grow: 2;
}

.d-flex-3 {
  flex-grow: 3;
}

.main-nav {
  background-color: #000;
  z-index: 1030;
  height: 64px;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
}

.main-nav nav {
  max-width: 988px;
  margin: 0 auto;
  padding: 0.5rem 1rem;
}

.main-nav > nav a {
  color: rgba(255, 255, 255, 0.6);
}

.main-nav > nav a.active {
  color: rgba(255, 255, 255, 0.9);
}

.nav-tabs a, .nav-tabs a:hover {
  color: $purpleHathor;
}

.dropdown-menu a.nav-link {
  color: #212529 !important;
}

#navbarDropdown {
  cursor: pointer;
}

.version-wrapper {
  padding-left: 1rem;
}

.version-wrapper span {
  color: rgba(255, 255, 255, 0.6);
  font-size: 11px;
}

.pagination {
  padding-top: 2rem;
}

.page-item.active .page-link {
  background-color: $purpleHathor;
  border-color: $purpleHathor;
}

.page-link {
  color: $purpleHathor;
}

.page-link:hover {
  color: $purpleHathorHover;
  cursor: pointer;
}

.page-link:focus {
  box-shadow: none;
}

#tx-table tbody tr {
  cursor: pointer;
}

#peer-table tbody td, #peer-table thead th, #tx-table tbody td, #tx-table thead th, #token-history tbody td, #token-history thead th, #address-list tbody td, #address-list thead th, #nano-history tbody td, #nano-history thead th {
  text-align: center;
}

.tx-data-wrapper label {
  font-weight: bold;
}

.address-wrapper {
  padding: 1rem;
  border: 1px solid #ddd;
}

.address-wrapper p {
  font-size: 1.25rem;
  margin-bottom: 0.5rem;
}

div.new-address-wrapper, button.send-tokens {
  margin-bottom: 1rem;
  margin-right: 1rem;
}

button.new-address {
  margin-right: 1rem;
}

div.new-address-wrapper span {
  margin-right: 1rem;
}

div.new-address-wrapper canvas {
  cursor: pointer;
}

#formSendTokens .outputs-wrapper input, #formSendTokens .inputs-wrapper input, #formSendTokens .wrapper input {
  margin-right: 1rem;
}

#formSendTokens .checkbox-wrapper {
  margin-bottom: 1rem;
}

#formCreateNFT {
  padding-bottom: 2rem;
}

.tx-input-wrapper textarea {
  margin: 1rem 0;
}

.tx-input-wrapper button {
  margin-top: 1rem;
  margin-bottom: 2rem;
  width: 160px;
}

.main-nav > nav .navbar-brand {
  font-size: 1rem;
  margin-right: 3rem;
}

.main-nav > nav .navbar-brand > img {
  height: 28px;
  width: auto;
}

#qrCodeModal .download-qrcode {
  margin-top: 1rem;
}

i.pointer {
  cursor: pointer;
}

.hathor-alert {
  position: fixed !important;
  right: 1rem;
  bottom: 1rem;
}

.hathor-floating-alert {
  right: auto;
  left: auto;
}

.navigation-search i {
  color: #fff;
}

.navigation-search input {
  border: none;
}

#token-history .spent-tx, #token-history .voided {
  text-decoration: line-through;
}

#token-history .input-tr .state, #token-history .input-tr .value, .sent-value {
  color: #dc3545;
}

#token-history .output-tr .state, #token-history .output-tr .value, .received-value {
  color: #28a745;
}

#token-history .state.voided, #token-history .value .voided {
  color: #6c757d !important;
}

#token-history .value {
	text-align: right;
	font-family: monospace;
	font-size: 1.2rem;
}

#token-history .voided-element {
  text-decoration: none;
  background-color: #6c757d;
  font-size: 0.75rem;
  width: 1.5rem;
  height: 0.75rem;
  padding: 0.4rem;
  border-radius: 0.75rem;
  color: white;
  margin-left: 1rem;
}

#address-list .number {
  text-align: right;
}

tr.tr-title {
  background-color: rgba(0,0,0,0.05);
  cursor: default !important;
}

tr.tr-title td {
  font-weight: bold;
}

svg.svg-wrapper {
  width:100%;
  height:250px
}

.svg-wrapper line {
  stroke: #ddd;
  shape-rendering: crispEdges;
}

.svg-wrapper circle {
  fill-opacity: 0.5;
}

.svg-wrapper rect {
  fill-opacity: 0.5;
}

.dag-visualizer input {
  width: 60px;
}

.dag-visualizer btn {
  width: 70px;
}

.navbar-nav a.nav-link.active {
  font-weight: bold;
}

@media (max-width: 992px) {
  .navbar-nav li.nav-item {
    padding: 0rem 1rem;
  }

  .navbar-right {
    padding: 0.5rem 1rem;
  }

  .main-nav nav.navbar .navbar-brand {
    padding-left: 1rem;
  }

  .main-nav nav.navbar {
    background-color: #000;
  }

  .navigation-search .version-wrapper:first-child {
    padding: 0;
  }
}

.line {
  fill: none;
  stroke-width: 2px;
}

.grid line {
  stroke: lightgrey;
  stroke-opacity: 0.7;
  shape-rendering: crispEdges;
}

.grid path {
  stroke-width: 0;
}

.hathor-alert {
  display: none;
}

.hathor-alert.show {
  display: block !important;
}

#graph {
  border: 1px solid;
}

#graph .tx, #graph .block {
  stroke: #000;
  stroke-width: 1.5px;
}

#graph .link {
  stroke: #666;
  stroke-width: 0.2px;
}

#graph .tx .tx-text, #graph .block .block-text {
  stroke-width: 0px;
  font-size: 4px;
}

.tooltip {
  position: absolute;
  background-color: white;
  max-width: 200px;
  height: auto;
  padding: 1px;
  border-style: solid;
  border-radius: 4px;
  border-width: 1px;
  box-shadow: 3px 3px 10px rgba(0, 0, 0, .5);
  pointer-events: none;
}

#graph {
  margin-top: 24px;
}

.dagWrapper {
  width: 100%;
}

.logout-btn {
  border: 0;
  background-color: transparent;
  color: #fff;
  opacity: 0.5;
  cursor: pointer;
  outline: 0;
}

.logout-btn:hover {
  opacity: 0.75;
}

.graph-label {
  width: 100%;
}

.graph-div svg {
  max-width: 100%;
}

.outside-content-wrapper {
  background-color: #000;
  width: 100%;
  height: 100%;
  overflow: auto;
  display: flex;
  justify-content: center;
  align-items: flex-start;

}

.inside-white-wrapper {
  background-color: transparent;
  max-width: 728px;
  padding: 4rem !important;
}
/* ... */

